update solution, edit ethnic

--- a/Proposal_Project_YourGroupNameHere.ipynb
+++ b/Proposal_Project_YourGroupNameHere.ipynb
@@ -145,7 +145,7 @@
     "\n",
     "The proposed solution combines **Reinforcement Learning (RL)** and **Convolutional Neural Networks (CNNs)** to develop a self-driving car system in a simulated environment created using **Webots**. The system learns to navigate autonomously by processing visual inputs from a front-facing camera and optimizing driving policies through trial and error.\n",
     "\n",
-    "# **Model**\n",
+    "### Model\n",
     "- **Webots** provides a realistic simulation environment with customizable tracks and driving scenarios. The car is equipped with a front-facing camera to capture visual input, simulating real-world driving conditions.\n",
     "- A **CNN** processes raw image data to extract meaningful features (e.g., lane markings, obstacles, traffic signs).\n",
     "- Implemented using **PyTorch**, the CNN serves as the perception module, transforming visual inputs into a state space for the RL agent.\n",
@@ -153,20 +153,20 @@
     "- The state space consists of CNN-extracted features, and the action space includes controls like steering, throttle, and brake.\n",
     "- Includes reward fuctions that gives positive rewards for staying within lanes and maintaining safe speeds, negative rewards for collisions, going off-road, or violating traffic rules.\n",
     "\n",
-    "# **Training Pipeline**\n",
+    "### Training Pipeline\n",
     "1. The car collects image data from the Webots environment.\n",
     "2. The CNN processes the images and extracts features.\n",
     "3. The RL agent selects actions based on the features and receives rewards.\n",
     "4. The agent updates its policy iteratively using collected experiences.\n",
     "\n",
-    "# **Testing and Evaluation**\n",
+    "### Testing and Evaluation\n",
     "- The trained model is tested on unseen tracks or scenarios to evaluate generalization.\n",
     "- Evalutaion metrics are listed below \n",
     "- A **rule-based controller** serves as the **benchmark**. It follows predefined rules (e.g., stay in the center of the lane, stop at obstacles) without learning capabilities.\n",
     "\n",
     "---\n",
     "\n",
-    "## Why This Solution Works\n",
+    "### Why This Solution Works\n",
     "\n",
     "- CNNs excel at processing image data and have been successfully used in autonomous driving tasks like lane detection and object recognition. By extracting meaningful features from raw images, the CNN enables the RL agent to interpret complex visual inputs effectively.\n",
     "- RL allows the agent to learn optimal policies through trial and error, making it well-suited for dynamic and unpredictable driving scenarios. The reward-based learning process ensures the agent improves over time by maximizing safe and efficient driving behaviors.\n",
