--- a/Proposal_Project_YourGroupNameHere.ipynb
+++ b/Proposal_Project_YourGroupNameHere.ipynb
@@ -112,7 +112,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As this is a reinforcement learning project, the agent will generate its own data through its interaction with the Webots environment and will not use a pre-existing static dataset. Each observation from the agent will consist of various sensor readings <a name=\"webots_sensors\"></a>[<sup>[2]</sup>](#webots_sensors_note):\n",
+    "As this is a reinforcement learning project, the agent will generate its own data through its interaction with the Webots environment and will not use a pre-existing static dataset. Each observation from the agent will consist of various sensor readings <a name=\"webots_sensors\"></a>[<sup>[1]</sup>](#webots_sensors_note):\n",
     "- **RGB image frames**: 1D byte array \n",
     "- **Point cloud distance data (LiDAR)**: 1D float array\n",
     "- **Proximity sensor data**: Float\n",
@@ -121,7 +121,7 @@
     "- **Angular velocity**: 3D float array\n",
     "- **Cardinal direction**: 3D float array\n",
     "- **Wheel rotation**: Float (in radians) \n",
-    "- Control commands <a name=\"webots_carlib\"></a>[<sup>[3]</sup>](#webots_carlib_note)\n",
+    "- Control commands <a name=\"webots_carlib\"></a>[<sup>[2]</sup>](#webots_carlib_note)\n",
     "    - **Steering**: Float (in radians)\n",
     "    - **Throttle**: Float ([0, max_speed])\n",
     "    - **Braking**: Float ([0, 1])\n",
@@ -148,7 +148,7 @@
     "### Model\n",
     "- **Webots** provides a realistic simulation environment with customizable tracks and driving scenarios. The car is equipped with a front-facing camera to capture visual input, simulating real-world driving conditions.\n",
     "- A **CNN** processes raw image data to extract meaningful features (e.g., lane markings, obstacles, traffic signs).\n",
-    "- Implemented using **PyTorch**, the CNN serves as the perception module, transforming visual inputs into a state space for the RL agent.\n",
+    "- Implemented using **PyTorch**, the CNN serves as the perception module, transforming visual inputs into a state space for the RL agent<a name=\"self_driving_sim\"></a>[<sup>[3]</sup>](#self_driving_sim_note).\n",
     "- The RL agent may use **Proximal Policy Optimization (PPO)** to learn an optimal driving policy.\n",
     "- The state space consists of CNN-extracted features, and the action space includes controls like steering, throttle, and brake.\n",
     "- Includes reward fuctions that gives positive rewards for staying within lanes and maintaining safe speeds, negative rewards for collisions, going off-road, or violating traffic rules.\n",
@@ -169,8 +169,8 @@
     "### Why This Solution Works\n",
     "\n",
     "- CNNs excel at processing image data and have been successfully used in autonomous driving tasks like lane detection and object recognition. By extracting meaningful features from raw images, the CNN enables the RL agent to interpret complex visual inputs effectively.\n",
-    "- RL allows the agent to learn optimal policies through trial and error, making it well-suited for dynamic and unpredictable driving scenarios. The reward-based learning process ensures the agent improves over time by maximizing safe and efficient driving behaviors.\n",
-    "- Webots provides a realistic and customizable environment for training and testing, enabling the simulation of diverse driving scenarios. The simulator's integration with PyTorch ensures a seamless and reproducible implementation.\n",
+    "- RL allows the agent to learn optimal policies through trial and error, making it well-suited for dynamic driving scenarios. The reward-based learning process ensures the agent improves over time by maximizing safe and efficient driving behaviors.\n",
+    "- Webots provides a realistic and customizable environment for training and testing, enabling the simulation of diverse driving scenarios.\n",
     "\n",
     "---\n"
    ]
@@ -311,18 +311,10 @@
    "metadata": {},
    "source": [
     "# Footnotes\n",
-    "<a name=\"lorenznote\"></a>1.[^](#lorenz): Lorenz, T. (9 Dec 2021) Birds Aren’t Real, or Are They? Inside a Gen Z Conspiracy Theory. *The New York Times*. https://www.nytimes.com/2021/12/09/technology/birds-arent-real-gen-z-misinformation.html<br> \n",
-    "<a name=\"webots_sensors_note\"></a>2.[^](#webots_sensors): Cyberbotics API Reference: doc. https://cyberbotics.com/doc/reference/nodes-and-api-functions?tab-language=python  \n",
-    "<a name=\"webots_carlib_note\"></a>3.[^](#webots_carlib): Cyberbotics Car & Driver Library Reference: doc. https://cyberbotics.com/doc/automobile/car-and-driver-libraries \n",
-    "\n"
+    "<a name=\"webots_sensors_note\"></a>1.[^](#webots_sensors): Cyberbotics API Reference: doc. https://cyberbotics.com/doc/reference/nodes-and-api-functions?tab-language=python  <br> \n",
+    "<a name=\"webots_carlib_note\"></a>2.[^](#webots_carlib): Cyberbotics Car & Driver Library Reference: doc. https://cyberbotics.com/doc/automobile/car-and-driver-libraries <br> \n",
+    "<a name=\"self_driving_sim_note\"></a>3.[^](#self_driving_sim): Aryan Jha, \"Creating a Self-Driving Car Simulation,\" Medium, [https://aryanjha.medium.com/creating-a-self-driving-car-simulation-977bed8f49b4](https://aryanjha.medium.com/creating-a-self-driving-car-simulation-977bed8f49b4).\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
