--- a/Proposal_Project_YourGroupNameHere.ipynb
+++ b/Proposal_Project_YourGroupNameHere.ipynb
@@ -117,7 +117,9 @@
    "source": [
     "# Evaluation Metrics\n",
     "\n",
-    "Propose at least one evaluation metric that can be used to quantify the performance of both the benchmark model and the solution model. The evaluation metric(s) you propose should be appropriate given the context of the data, the problem statement, and the intended solution. Describe how the evaluation metric(s) are derived and provide an example of their mathematical representations (if applicable). Complex evaluation metrics should be clearly defined and quantifiable (can be expressed in mathematical or logical terms)."
+    "The first evaluation metric we will use is the episode/level completion rate. This is defined as the number of successful completions over the number of attempts. This metric can be applied to every game that we are considering. In Super Mario Bros, the agent may complete a level or it may lose all of its lives or run out of time before completion and would therefore fail. In Street Fighter, the agent may lose the fight which would be considered a fail. We should see the completion rate approach one as the number of trials increases towards infinity. The benchmark for this metric could be the average completion rate that we achieve on the same level/episode.\n",
+    "\n",
+    "Another possible evaluation metric we could use is the time to complete an episode/level after training the model. Again, lthough we don't have the exact game figured out yet, the time to complete an episode can be applied to nearly all games. For example, in Super Mario Bros, this would be the time to complete a certain level. Time starts when the player/bot is spawned in and ends once it reaches the flagpole. Another possible game could be Street Fighter. The time to complete an episode would be the time it takes to defeat an opponent at a certain difficulty. This metric should decrease as the number of trials increase. The benchmark for this metric could either be the time that an early version of the model itself gets or the time that a human (one of us) gets."
    ]
   },
   {
@@ -200,7 +202,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -214,7 +216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11 (default, Jul 27 2021, 07:03:16) \n[Clang 10.0.0 ]"
+   "version": "3.12.8"
   },
   "vscode": {
    "interpreter": {
@@ -223,5 +225,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
