update abstract with data definition

--- a/Proposal_Project_YourGroupNameHere.ipynb
+++ b/Proposal_Project_YourGroupNameHere.ipynb
@@ -53,7 +53,7 @@
     "- what you will be doing with the data\n",
     "- how performance/success will be measured\n",
     "\n",
-    "Autonomous driving has the potential to improve road safety, enhance transportation efficiency, and reduce human driving errors. However, realiability of decision-making in dynamic environments remains a major challenge. This study aims to evaluate AI models for autonomous vehicle control using Webots, a high-fidelity simulation platform. The selected models will be tested under diverse driving scenarios to determine the most effective strategies for safe and efficient navigation. ...... [Data description needed]  The models will be assessed based on key performance metrics. Generaly, it includes collision avoidance, lane adherence, traffic rule compliance, and travel efficiency. Success will be measured by model’s ability to navigate under complex scenarios with minimized infractions and optimal route completion time. By systematically testing AI-driven decision-making strategies, this project contributes to the development of robustness, interpretability, and high-performance of autonomous vehicle systems."
+    "Autonomous driving has the potential to improve road safety, enhance transportation efficiency, and reduce human driving errors. However, realiability of decision-making in dynamic environments remains a major challenge. This study aims to evaluate AI models for autonomous vehicle control using Webots, a high-fidelity simulation platform. The selected models will be tested under diverse driving scenarios to determine the most effective strategies for safe and efficient navigation. Each model will process sensor data, including RGB images, LiDAR point clouds, GPS coordinates, proximity sensors, and motion data, which will be preprocessed and stored as NumPy arrays to ensure consistency and stability in training. The models will be assessed based on key performance metrics. Generally, it includes collision avoidance, lane adherence, traffic rule compliance, and travel efficiency. Success will be measured by model’s ability to navigate under complex scenarios with minimized infractions and optimal route completion time. By systematically testing AI-driven decision-making strategies, this project contributes to the development of robustness, interpretability, and high-performance of autonomous vehicle systems."
    ]
   },
   {
@@ -121,7 +121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As this is a reinforcement learning project, the agent will generate its own data through its interaction with the Webots environment and will not use a pre-existing static dataset. Each observation from the agent will consist of various sensor readings <a name=\"webots_sensors\"></a>[<sup>[1]</sup>](#webots_sensors_note):\n",
+    "As this is a reinforcement learning project, the agent will generate its own data through its interaction with the Webots environment and will not use a pre-existing static dataset. Each observation from the agent will consist of various sensor readings <a name=\"webots_sensors\"></a>[<sup>[6]</sup>](#webots_sensors_note):\n",
     "- **RGB image frames**: 1D byte array \n",
     "- **Point cloud distance data (LiDAR)**: 1D float array\n",
     "- **Proximity sensor data**: Float\n",
@@ -130,7 +130,7 @@
     "- **Angular velocity**: 3D float array\n",
     "- **Cardinal direction**: 3D float array\n",
     "- **Wheel rotation**: Float (in radians) \n",
-    "- Control commands <a name=\"webots_carlib\"></a>[<sup>[2]</sup>](#webots_carlib_note)\n",
+    "- Control commands <a name=\"webots_carlib\"></a>[<sup>[7]</sup>](#webots_carlib_note)\n",
     "    - **Steering**: Float (in radians)\n",
     "    - **Throttle**: Float ([0, max_speed])\n",
     "    - **Braking**: Float ([0, 1])\n",
@@ -141,9 +141,9 @@
     "- Point cloud distance data for determining following distance and preventing collisions\n",
     "- Proximity sensor data for accurate close range obstacle and collision detection\n",
     "\n",
-    "To ensure the vehicle's efficiency the most critical variables are time step and GPS coordinates to minimize drive time verify the correct final destination. \n",
+    "To ensure the vehicle's efficiency the most critical variables are time step and GPS coordinates to minimize drive time and verify the correct final destination. \n",
     "\n",
-    "Webots by default runs at 32ms per time step, meaning approximately 31 observations will be recorded per 1 second of simulation time. Observations will be stored as NumPy arrays for optimal reinforcement learning training. To ensure consistency and prevent feature bias, the sensor data will be preprocessed. All sensor readings will be normalized to a common scale to improve stability and convergence speed. In addition, RGB images that are returned from as 1D arrays will be reshaped into 3D arrays (height x width x channels) and pixel values will be normalized. GPS coordinates will be converted from abosolute to relative positioning to simplify state representation. Lastly, null values returned by LiDAR sensors will be replaced with the maximum range of the sensor. "
+    "Webots by default runs at 32ms per time step, meaning approximately 31 observations will be recorded per 1 second of simulation time. Observations will be stored as NumPy arrays for optimal reinforcement learning training. To ensure consistency and prevent feature bias, the sensor data will be preprocessed. All sensor readings will be normalized to a common scale to improve stability and convergence speed. In addition, RGB images that are returned as 1D arrays will be reshaped into 3D arrays (height x width x channels) and pixel values will be normalized. GPS coordinates will be converted from absolute to relative positioning to simplify state representation. Lastly, null values returned by LiDAR sensors will be replaced with the maximum range of the sensor. "
    ]
   },
   {
@@ -157,7 +157,7 @@
     "### Model\n",
     "- **Webots** provides a realistic simulation environment with customizable tracks and driving scenarios. The car is equipped with a front-facing camera to capture visual input, simulating real-world driving conditions.\n",
     "- A **CNN** processes raw image data to extract meaningful features (e.g., lane markings, obstacles, traffic signs).\n",
-    "- Implemented using **PyTorch**, the CNN serves as the perception module, transforming visual inputs into a state space for the RL agent<a name=\"self_driving_sim\"></a>[<sup>[3]</sup>](#self_driving_sim_note).\n",
+    "- Implemented using **PyTorch**, the CNN serves as the perception module, transforming visual inputs into a state space for the RL agent<a name=\"self_driving_sim\"></a>[<sup>[8]</sup>](#self_driving_sim_note).\n",
     "- The RL agent may use **Proximal Policy Optimization (PPO)** to learn an optimal driving policy.\n",
     "- The state space consists of CNN-extracted features, and the action space includes controls like steering, throttle, and brake.\n",
     "- Includes reward fuctions that gives positive rewards for staying within lanes and maintaining safe speeds, negative rewards for collisions, going off-road, or violating traffic rules.\n",
@@ -320,19 +320,20 @@
    "metadata": {},
    "source": [
     "# Footnotes\n",
-    "<a name=\"webots_sensors_note\"></a>1.[^](#webots_sensors): Cyberbotics API Reference: doc. https://cyberbotics.com/doc/reference/nodes-and-api-functions?tab-language=python  <br> \n",
-    "<a name=\"webots_carlib_note\"></a>2.[^](#webots_carlib): Cyberbotics Car & Driver Library Reference: doc. https://cyberbotics.com/doc/automobile/car-and-driver-libraries <br> \n",
-    "<a name=\"self_driving_sim_note\"></a>3.[^](#self_driving_sim): Aryan Jha, \"Creating a Self-Driving Car Simulation,\" Medium, [https://aryanjha.medium.com/creating-a-self-driving-car-simulation-977bed8f49b4](https://aryanjha.medium.com/creating-a-self-driving-car-simulation-977bed8f49b4).\n",
     "<a name=\"shalevnote\"></a>1.^: Shalev-Shwartz, S., Shammah, S., & Shashua, A. (2016). Safe, multi-agent reinforcement learning for autonomous driving. arXiv preprint arXiv:1610.03295. https://arxiv.org/abs/1610.03295<br>\n",
-    "\n",
     "<a name=\"sallabnote\"></a>2.^: El Sallab, A., Abdou, M., Perot, E., & Yogamani, S. (2017). Deep reinforcement learning framework for autonomous driving. arXiv preprint arXiv:1704.02532. https://arxiv.org/abs/1704.02532<br>\n",
-    "\n",
     "<a name=\"kimnote\"></a>3.^: Kim, J., Rohrbach, A., Darrell, T., Canny, J., & Akata, Z. (2018). Textual explanations for self-driving vehicles. European Conference on Computer Vision (ECCV). https://openaccess.thecvf.com/content_ECCV_2018/html/Jinkyu_Kim_Textual_Explanations_for_ECCV_2018_paper.html<br>\n",
-    "\n",
     "<a name=\"schoettlenote\"></a>4.^: Schoettle, B., & Sivak, M. (2014). A survey of public opinion about autonomous and self-driving vehicles in the U.S., the U.K., and Australia. University of Michigan Transportation Research Institute. https://deepblue.lib.umich.edu/handle/2027.42/108384<br>\n",
-    "\n",
-    "<a name=\"sivaknote\"></a>5.^: Sivak, M., & Schoettle, B. (2015). Road safety with self-driving vehicles: General limitations and road sharing with conventional vehicles. University of Michigan Transportation Research Institute. https://deepblue.lib.umich.edu/handle/2027.42/110789<br>\n"
+    "<a name=\"sivaknote\"></a>5.^: Sivak, M., & Schoettle, B. (2015). Road safety with self-driving vehicles: General limitations and road sharing with conventional vehicles. University of Michigan Transportation Research Institute. https://deepblue.lib.umich.edu/handle/2027.42/110789<br>\n",
+    "<a name=\"webots_sensors_note\"></a>6.[^](#webots_sensors): Cyberbotics API Reference: doc. https://cyberbotics.com/doc/reference/nodes-and-api-functions?tab-language=python  <br> \n",
+    "<a name=\"webots_carlib_note\"></a>7.[^](#webots_carlib): Cyberbotics Car & Driver Library Reference: doc. https://cyberbotics.com/doc/automobile/car-and-driver-libraries <br> \n",
+    "<a name=\"self_driving_sim_note\"></a>8.[^](#self_driving_sim): Aryan Jha, \"Creating a Self-Driving Car Simulation,\" Medium, [https://aryanjha.medium.com/creating-a-self-driving-car-simulation-977bed8f49b4](https://aryanjha.medium.com/creating-a-self-driving-car-simulation-977bed8f49b4).  "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
