Problem statement and Data

--- a/Proposal_Project_Mahjong_AI.ipynb
+++ b/Proposal_Project_Mahjong_AI.ipynb
@@ -76,7 +76,9 @@
    "source": [
     "# Problem Statement\n",
     "\n",
-    "Clearly describe the problem that you are solving. Avoid ambiguous words. The problem described should be well defined and should have at least one ML-relevant potential solution. Additionally, describe the problem thoroughly such that it is clear that the problem is quantifiable (the problem can be expressed in mathematical or logical terms), measurable (the problem can be measured by some metric and clearly observed), and replicable (the problem can be reproduced and occurs more than once)."
+    "Clearly describe the problem that you are solving. Avoid ambiguous words. The problem described should be well defined and should have at least one ML-relevant potential solution. Additionally, describe the problem thoroughly such that it is clear that the problem is quantifiable (the problem can be expressed in mathematical or logical terms), measurable (the problem can be measured by some metric and clearly observed), and replicable (the problem can be reproduced and occurs more than once).\n",
+    "\n",
+    "We implement Mahjong playing AI by using Monte Carlo on policy method. We do it with exploring start for AI to learn many tactics on a lot of kinds of situation because Mahjong is a somewhat highly stochastic game. Even though it is, the optimal movement is highly related to the winning. We set the reward not only on the winning and losing, which is outcome, but on Pung and Chi to measure the AI performance because those are considered as good ways to become closer to winning. Furthermore we will set some rules to teach AI what kind of movement leading to the good situation and bad situation to enhance it learning optimal movement efficiently as needed. To improve the value of win rate, AI will learn as the number of simulation increase. Like this AI uses Monte Carlo to get better performance on many kinds of situation."
    ]
   },
   {
@@ -94,7 +96,17 @@
     "- what some critical variables are, how they are represented\n",
     "- any special handling, transformations, cleaning, etc will be needed\n",
     "\n",
-    "If you don't yet know what your dataset(s) will be, you should describe what you desire in terms of the above bullets."
+    "We don't yet know what dataset(s) will be so we describe the desire below.\n",
+    "- link/reference to obtain it\n",
+    "→online free accesible dataset\n",
+    "- description of the size of the dataset (# of variables, # of observations)\n",
+    "→Not so large to reduce the learning time, around several thousands.\n",
+    "- what an observation consists of\n",
+    "→players' current hands, current tiles on the table, and actions taken by players\n",
+    "- what some critical variables are, how they are represented\n",
+    "→Player hand (list of numbers), actions taken(numbers), the discarded tiles(numbers)\n",
+    "- any special handling, transformations, cleaning, etc will be needed\n",
+    "→we should unify to one mahjong rule and modify the dataset because the rule depends on the area."
    ]
   },
   {
