--- a/Proposal_Project_YourGroupNameHere.ipynb
+++ b/Proposal_Project_YourGroupNameHere.ipynb
@@ -9,28 +9,6 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Project Description\n",
-    "\n",
-    "You have the choice of doing either (1) an AI solve a problem style project or (2) run a Special Topics class on a topic of your choice.  If you want to do (2) you should fill out the _other_ proposal for that. This is the proposal description for (1).\n",
-    "\n",
-    "You will design and execute a machine learning project. There are a few constraints on the nature of the allowed project. \n",
-    "- The problem addressed will not be a \"toy problem\" or \"common training students problem\" like 8-Queens or a small Traveling Salesman Problem or similar\n",
-    "- If its the kind of problem (e.g., RL) that interacts with a simulator or live task, then the problem will have a reasonably complex action space. For instance, a wupus world kind of thing with a 9x9 grid is definitely too small.  A simulated mountain car with a less complex 2-d road and simplified dynamics seems like a fairly low achievement level.  A more complex 3-d mountain car simulation with large extent and realistic dynamics, sure sounds great!\n",
-    "- If its the kind of problem that uses a dataset, then the dataset will have >1k observations and >5 variables. I'd prefer more like >10k observations and >10 variables. A general rule is that if you have >100x more observations than variables, your solution will likely generalize a lot better. The goal of training an unsupervised machine learning model is to learn the underlying pattern in a dataset in order to generalize well to unseen data, so choosing a large dataset is very important.\n",
-    "- The project must include some elements we talked about in the course\n",
-    "- The project will include a model selection and/or feature selection component where you will be looking for the best setup to maximize the performance of your AI system. Generally RL tasks may require a huge amount of training, so extensive grid search is unlikely to be possible. However expoloring a few reasonable hyper-parameters may still be possible. \n",
-    "- You will evaluate the performance of your AI system using more than one appropriate metric\n",
-    "- You will be writing a report describing and discussing these accomplishments\n",
-    "\n",
-    "\n",
-    "Feel free to delete this description section when you hand in your proposal."
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -46,12 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Abstract - Jiawei\n",
-    "This section should be short and clearly stated. It should be a single paragraph <200 words.  It should summarize: \n",
-    "- what your goal/problem is\n",
-    "- what the data used represents and how they are measured\n",
-    "- what you will be doing with the data\n",
-    "- how performance/success will be measured\n",
+    "# Abstract\n",
     "\n",
     "Autonomous driving has the potential to improve road safety, enhance transportation efficiency, and reduce human driving errors. However, realiability of decision-making in dynamic environments remains a major challenge. This study aims to evaluate AI models for autonomous vehicle control using Webots, a high-fidelity simulation platform. The selected models will be tested under diverse driving scenarios to determine the most effective strategies for safe and efficient navigation. Each model will process sensor data, including RGB images, LiDAR point clouds, GPS coordinates, proximity sensors, and motion data, which will be preprocessed and stored as NumPy arrays to ensure consistency and stability in training. The models will be assessed based on key performance metrics. Generally, it includes collision avoidance, lane adherence, traffic rule compliance, and travel efficiency. Success will be measured by model’s ability to navigate under complex scenarios with minimized infractions and optimal route completion time. By systematically testing AI-driven decision-making strategies, this project contributes to the development of robustness, interpretability, and high-performance of autonomous vehicle systems."
    ]
@@ -61,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Background - Jiawei\n",
+    "# Background\n",
     "Autonomous vehicles have the potential to revolutionize transportation by reducing human driving errors and improving traffic efficiency. According to the National Highway Traffic Safety Administration (NHTSA), there are about 94% of road accidents are caused by human errors, which indicates the potential safety benefits of self-driving technology. However, despite the advancements in AI algorithms, how to ensure safety and reliability of self-driving technology, and also make perfect decisions remains a significant challenge, especially in complex, multi-agent environments where vehicles interact with a mass of unpredictable human drivers, cyclists, and pedestrians<a name=\"shalev\"></a><sup>[1]</sup>. Algorithms must dynamically adjust to current environments such as uncontrolled intersections, lane merging, or sudden braking from other vehicles. Therefore, a robust decision-making system is crucial for the success.\n",
     "\n",
     "One promising approach to enhancing the realiability of decision-making is through deep reinforcement learning (RL). Unlike traditional rule-based systems, which rely on handcrafted heuristics, RL allows vehicles to learn from experience and optimize their actions over time. El Sallab et al. propose an RL-based framework that integrates recurrent neural networks (RNNs) to improve decision-making in partially observable environments<a name=\"sallab\"></a><sup>[1]</sup>. This framework helps autonomous vehicles remember past information, which is crucial in some complicated scenarios like hidden pedestrians suddenly emerging from behind parked cars or anticipating the acceleration patterns of nearby vehicles. Furthermore, RL enables autonomous vehicles to optimize their driving policies based on multiple objectives, for example, minimizing energy consumption while maintaining safety and efficiency.\n",
@@ -81,9 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Problem Statement - Katie\n",
-    "\n",
-    "*Clearly describe the problem that you are solving. Avoid ambiguous words. The problem described should be well defined and should have at least one ML-relevant potential solution. Additionally, describe the problem thoroughly such that it is clear that the problem is quantifiable (the problem can be expressed in mathematical or logical terms), measurable (the problem can be measured by some metric and clearly observed), and replicable (the problem can be reproduced and occurs more than once).*\n",
+    "# Problem Statement\n",
     "\n",
     "Autonomous driving systems must make real-time decisions in dynamic environments while balancing safety, efficiency, and adherence to traffic rules. Traditional rule-based approaches struggle to generalize across diverse driving conditions, thus reinforcement learning (RL) is a promising alternative for self-driving applications. However, training RL models to drive safely and effectively remains a significant challenge due to the need for reliable evaluation metrics and the complexity of real-world driving scenarios.\n",
     "\n",
@@ -105,22 +76,6 @@
    "source": [
     "# Data - Grace\n",
     "\n",
-    "*You should have a strong idea of what dataset(s) will be used to accomplish this project.* \n",
-    "\n",
-    "*If you know what (some) of the data you will use, please give the following information for each dataset:*\n",
-    "*- link/reference to obtain it*\n",
-    "*- description of the size of the dataset (# of variables, # of observations)*\n",
-    "*- what an observation consists of*\n",
-    "*- what some critical variables are, how they are represented*\n",
-    "*- any special handling, transformations, cleaning, etc will be needed*\n",
-    "\n",
-    "*If you don't yet know what your dataset(s) will be, you should describe what you desire in terms of the above bullets.*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "As this is a reinforcement learning project, the agent will generate its own data through its interaction with the Webots environment and will not use a pre-existing static dataset. Each observation from the agent will consist of various sensor readings <a name=\"webots_sensors\"></a>[<sup>[6]</sup>](#webots_sensors_note):\n",
     "- **RGB image frames**: 1D byte array \n",
     "- **Point cloud distance data (LiDAR)**: 1D float array\n",
@@ -150,7 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Proposed Solution - Hsiang-An\n",
+    "# Proposed Solution\n",
     "\n",
     "The proposed solution combines **Reinforcement Learning (RL)** and **Convolutional Neural Networks (CNNs)** to develop a self-driving car system in a simulated environment created using **Webots**. The system learns to navigate autonomously by processing visual inputs from a front-facing camera and optimizing driving policies through trial and error.\n",
     "\n",
@@ -188,9 +143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Evaluation Metrics - Katie\n",
-    "\n",
-    "*Propose at least one evaluation metric that can be used to quantify the performance of both the benchmark model and the solution model. The evaluation metric(s) you propose should be appropriate given the context of the data, the problem statement, and the intended solution. Describe how the evaluation metric(s) are derived and provide an example of their mathematical representations (if applicable). Complex evaluation metrics should be clearly defined and quantifiable (can be expressed in mathematical or logical terms).*\n",
+    "# Evaluation Metrics\n",
     "\n",
     "In this project, we evaluate the performance of both the **benchmark model** and the **solution model** using key safety and efficiency metrics. These metrics ensure that the self-driving agent follows safe driving behavior while effectively navigating to its destination.\n",
     "\n",
@@ -258,7 +211,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ethics & Privacy - Hsiang-An"
+    "# Ethics & Privacy"
    ]
   },
   {
@@ -288,14 +241,14 @@
     "* Respond in group chat within 12 hours\n",
     "* Conflict resolved by majority, any conflicts should be brought up within group before seeking TA assistance \n",
     "* Work should be divided evenly to the best of the group's ability\n",
-    "* Be awafre of deadlines, each member's portion of work should be completed at least a couple hours prior to deadline to allow for revision \n"
+    "* Be aware of deadlines, each member's portion of work should be completed at least a couple hours prior to deadline to allow for revision \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project Timeline Proposal - Hsiang-An"
+    "# Project Timeline Proposal"
    ]
   },
   {
@@ -306,7 +259,7 @@
     "| Meeting Date  | Meeting Time| Completed Before Meeting  | Discuss at Meeting |\n",
     "|---|---|---|---|\n",
     "| 2/12  |  5 PM |  Brainstorm topics/questions and split parts for research (all)  | Determine best form of communication; Discuss and decide on final project topic; discuss hypothesis; begin background research | \n",
-    "| 2/14  |  12 PM |  Finalize Project Proposal (all), Search for datasets (Jiawei) | Complete background, Discuss datasets and metrics, finalize questions, Turn in proposal | \n",
+    "| 2/14  |  12 PM |  Finalize Project Proposal (all) | Complete background, Discuss datasets and metrics, finalize questions, Turn in proposal | \n",
     "| 2/21  | 5 PM  | Import and Wrangle Data (Hsiang-An), EDA (Grace)  | Discuss and finalize datasets and metrics for EDA, Review if work is divided in meaningful manner   |\n",
     "| 2/28  |  5 PM  | Finalize data, Continue on EDA (Grace), Programming start for RL (Katie) | Review if EDA and data wrangling is completed, Discuss possible algorithm, validations, model selection |\n",
     "| 3/5  | 6 PM  | Finalize EDA, continue programming (Katie), Start Analysis (Jiawei, Hsiang-An) | Review project code, Analyze algorithms and model performance, Split work based on what’s lacking |\n",
