--- a/Proposal_Project_YourGroupNameHere.ipynb
+++ b/Proposal_Project_YourGroupNameHere.ipynb
@@ -49,11 +49,11 @@
    "metadata": {},
    "source": [
     "# Abstract \n",
-    "This section should be short and clearly stated. It should be a single paragraph <200 words.  It should summarize: \n",
-    "- what your goal/problem is\n",
-    "- what the data used represents and how they are measured\n",
-    "- what you will be doing with the data\n",
-    "- how performance/success will be measured"
+    "We will create and a AI model that can maximize its score in a small scale Tetris game. The model will utilize mainly backtracking and rely on \n",
+    "height as heuristic. The optimization of depth of backtracking, and the variation in heuristic measurement for this problem will be the main focus\n",
+    "of the project. The data used will be represented in preloaded order of pieces and thus allowing us to consider multiple variants of the same game based\n",
+    "on placement at the simultaneously. The heuristic will be interchangeable with the score, each line cleared equates to a points added to total score, which will help measure algorithms performance. The models depth and heuristic will be tweaked in order to maximize the score.\n",
+    "\n"
    ]
   },
   {
@@ -62,17 +62,8 @@
    "metadata": {},
    "source": [
     "# Background\n",
-    "We will create and a AI model that can maximize its score in a small scale Tetris game. The model will utilize mainly backtracking and rely on
-    height as heuristic. The optimization of depth of backtracking, and the variation in heuristic measurement for this problem will be the main focus
-    of the project. The data used will be represented in preloaded order of pieces and thus allowing us to consider multiple variants of the same game based
-    on placement at the simultaneously. The heuristic will be interchangeable with the score which will help measure algorithms performance. The models depth and
-    heuristic will be tweaked in order to maximize the score. \n ",
     "\n",
-    "Fill in the background and discuss the kind of prior work that has gone on in this research area here. **Use inline citation** to specify which references support which statements.  You can do that through HTML footnotes (demonstrated here). I used to reccommend Markdown footnotes (google is your friend) because they are simpler but recently I have had some problems with them working for me whereas HTML ones always work so far. So use the method that works for you, but do use inline citations.\n",
-    "\n",
-    "Here is an example of inline citation. After government genocide in the 20th century, real birds were replaced with surveillance drones designed to look just like birds<a name=\"lorenz\"></a>[<sup>[1]</sup>](#lorenznote). Use a minimum of 3 to 5 citations, but we prefer more <a name=\"admonish\"></a>[<sup>[2]</sup>](#admonishnote). You need enough citations to fully explain and back up important facts. \n",
-    "\n",
-    "Remeber you are trying to explain why someone would want to answer your question or why your hypothesis is in the form that you've stated. "
+    "Tetris, developed by Alexey Pajitnov in 1984, has become a well-studied benchmark for artificial intelligence due to its complex decision-making process and classification as an NP-hard problem<a name=\"demaine\"></a><sup>[1]</sup>. The challenge arises from the need to efficiently place falling tetrominoes while managing an ever-changing board state.Traditional AI approaches relied on handcrafted heuristics, such as minimizing gaps and maximizing cleared lines, but these methods often struggled with long-term planning. With advancements in machine learning, reinforcement learning (RL) has emerged as a powerful technique for training AI to play Tetris. Deep Q-networks (DQN) and other deep reinforcement that utalize backtracking methods have been successfully applied to optimize decision-making in dynamic environments<a name=\"mnih\"></a><sup>[2]</sup>.Our research aims to develop a simplified Tetris AI model capable of learning optimal strategies and assisting human players. By leveraging modern AI techniques, we seek to improve decision-making efficiency and demonstrate the practical applications of reinforcement learning in structured problem domains<a name=\"browne\"></a><sup>[3]</sup>. "
    ]
   },
   {
@@ -80,8 +71,7 @@
    "metadata": {},
    "source": [
     "# Problem Statement\n",
-    "\n",
-    "Clearly describe the problem that you are solving. Avoid ambiguous words. The problem described should be well defined and should have at least one ML-relevant potential solution. Additionally, describe the problem thoroughly such that it is clear that the problem is quantifiable (the problem can be expressed in mathematical or logical terms), measurable (the problem can be measured by some metric and clearly observed), and replicable (the problem can be reproduced and occurs more than once)."
+    "When it comes to Tetris, the game difficulty and complexity correspond to the range of peices, rotations and positions of placement. The larger the grid the more game varience to account for. Using traditional Tetris peices the board must be atleast 4 peices wide and long but there is no upper limit to a Tetris grid. As we try to optimize our model, we must be able to acount to how the scaling up the grid affects the efficency of our heuristic and backtraking techniques. Accounting for grid size goes hand in hand with the overall problem of creating a model that maximizes the overall score. "
    ]
   },
   {
@@ -89,17 +79,7 @@
    "metadata": {},
    "source": [
     "# Data\n",
-    "\n",
-    "You should have a strong idea of what dataset(s) will be used to accomplish this project. \n",
-    "\n",
-    "If you know what (some) of the data you will use, please give the following information for each dataset:\n",
-    "- link/reference to obtain it\n",
-    "- description of the size of the dataset (# of variables, # of observations)\n",
-    "- what an observation consists of\n",
-    "- what some critical variables are, how they are represented\n",
-    "- any special handling, transformations, cleaning, etc will be needed\n",
-    "\n",
-    "If you don't yet know what your dataset(s) will be, you should describe what you desire in terms of the above bullets."
+    "Since our problem is a live game, we don't have a huge dataset that we feed into the model to train it. Instead we will feed the current board state of the tetris game into our algorithm and have it pick the best moves and update the board state accordingly. Some critical variables would be the tetris board which we plan to represent as an array, the tetris pieces which we also plan to represent as an array. We also will need to account for all the possible rotations for the pieces. We will also need to make sure we update the board after each move for any cleared pieces.\n"
    ]
   },
   {
@@ -107,7 +87,14 @@
    "metadata": {},
    "source": [
     "# Proposed Solution\n",
+    "By first minimizing the problem into 4x10 Tetris grid we aim to test how simple backtracking and heuristic can affect the overall performance of the game. Smaller game will also allow us to better visualize correlation between depth and performance. Then we can then see how scaling up the grid affects the depth required for backtraking and if the same heuristic will be sufficient. An average Tetris board is 10x20 but this allows for greater possibility of placement and our backtraking tree will scale perportionatly to the width of the boards. \n",
     "\n",
+    "Our perposed solution to for creating an afficient backtracing algorithm to account for both varience and be runtime efficent is one with a set depth. We first load a large list of peices that is to large to be exhausted in a reasonable game of said grid size. The branching will occur when a state of a grid (our current action space) is introduced with a new peice. Each branch on the same level accounts for a possible valid peice rotatione and placement(the wider the board the more possible placements.) of the same peice. Once the set depth is reached in all branches the model will recurse backwards to the root compare the score of all possible grid states in the leafs and make the highest scoring leaf state the current state. We will then be back to a one node tree and will restart the branching process until all branches are game over aka max hieght of the grid has been reached. The score and our heurist will both be based on the rows cleared aka height. \n",
+    "\n",
+    "We will use this repository: https://gist.github.com/zmcedillo/012ff15aa3018cb61b45e5bafb4b15ce in order to simulate the game states and make sure that all peices are within valid placement. Using this repository code we can also simulate boards of various sizes and can easily gadge the score for scaling. Since boards of various sizes will have an expected different score, the score of each grid will be compared to an average score of the same board played 1000 times with random valid placement. We will thus compare our models success against random models average.\n",
+    "\n",
+    "\n",
+    " \n",
     "In this section, clearly describe a solution to the problem. The solution should be applicable to the project domain and appropriate for the dataset(s) or input(s) given. Provide enough detail (e.g., algorithmic description and/or theoretical properties) to convince us that your solution is applicable. Why might your solution work? Make sure to describe how the solution will be tested.  \n",
     "\n",
     "If you know details already, describe how (e.g., library used, function calls) you plan to implement the solution in a way that is reproducible.\n",
@@ -120,6 +107,8 @@
    "metadata": {},
    "source": [
     "# Evaluation Metrics\n",
+    "\n",
+    "We use the game score (rows cleared) in order to determine performance of our model. The higher the score, the more rows are cleared, the better our model has performed. As a point of comparison for our model, we will use the avegae performence  over 1000 of a random placement model. Our algorithm should be able to have a higher average score compared to this model since we are using a heuristic that focouses on maximizing score.\n",
     "\n",
     "Propose at least one evaluation metric that can be used to quantify the performance of both the benchmark model and the solution model. The evaluation metric(s) you propose should be appropriate given the context of the data, the problem statement, and the intended solution. Describe how the evaluation metric(s) are derived and provide an example of their mathematical representations (if applicable). Complex evaluation metrics should be clearly defined and quantifiable (can be expressed in mathematical or logical terms)."
    ]
@@ -135,11 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If your project has obvious potential concerns with ethics or data privacy discuss that here.  Almost every ML project put into production can have ethical implications if you use your imagination. Use your imagination. Get creative!\n",
-    "\n",
-    "Even if you can't come up with an obvious ethical concern that should be addressed, you should know that a large number of ML projects that go into producation have unintended consequences and ethical problems once in production. How will your team address these issues?\n",
-    "\n",
-    "Consider a tool to help you address the potential issues such as https://deon.drivendata.org"
+    "While a Tetris AI seems pretty simple and narrow in scope it can have some ethical implications. Tetris is mostly a singleplayer game but tournaments and leaderboards do exist so its possible for someone to cheat using this AI to gain an unfair advantage. Looking through Deon's ethical checklist, since we aren't utilizing any dataset we don't need to worry about any biases or gaps in our data. Our code is unlikely to be used for a different purpose than playing Tetris but even if it is it will only be able to be used to predict where the best place to place a block on a gameboard is so there is a low potential for misuse/harm."
    ]
   },
   {
@@ -154,10 +139,12 @@
    "metadata": {},
    "source": [
     "Put things here that cement how you will interact/communicate as a team, how you will handle conflict and difficulty, how you will handle making decisions and setting goals/schedule, how much work you expect from each other, how you will handle deadlines, etc...\n",
-    "* *Team Expectation 1*\n",
-    "* *Team Expectation 2*\n",
-    "* *Team Expecation 3*\n",
-    "* ..."
+    "* Respond to messages within a day\n",
+    "* Show up to meeting or do make up work\n",
+    "* Notify team members when changing code\n",
+    "* Have the most current version forked and cloned localy\n",
+    "* Complete assigned tickets within aloted time\n",
+    "* Be respectful"
    ]
   },
   {
@@ -174,13 +161,10 @@
     "Replace this with something meaningful that is appropriate for your needs. It doesn't have to be something that fits this format.  It doesn't have to be set in stone... \"no battle plan survives contact with the enemy\". But you need a battle plan nonetheless, and you need to keep it updated so you understand what you are trying to accomplish, who's responsible for what, and what the expected due dates are for each item.\n",
     "\n",
     "| Meeting Date  | Meeting Time| Completed Before Meeting  | Discuss at Meeting |\n",
-    "|---|---|---|---|\n",
-    "| 1/20  |  1 PM |  Brainstorm topics/questions (all)  | Determine best form of communication; Discuss and decide on final project topic; discuss hypothesis; begin background research | \n",
-    "| 1/26  |  10 AM |  Do background research on topic (Pelé) | Discuss ideal dataset(s) and ethics; draft project proposal | \n",
-    "| 2/1  | 10 AM  | Edit, finalize, and submit proposal; Search for datasets (Beckenbaur)  | Discuss Wrangling and possible analytical approaches; Assign group members to lead each specific part   |\n",
-    "| 2/14  | 6 PM  | Import & Wrangle Data ,do some EDA (Maradonna) | Review/Edit wrangling/EDA; Discuss Analysis Plan   |\n",
-    "| 2/23  | 12 PM  | Finalize wrangling/EDA; Begin programming for project (Cruyff) | Discuss/edit project code; Complete project |\n",
-    "| 3/13  | 12 PM  | Complete analysis; Draft results/conclusion/discussion (Carlos)| Discuss/edit full project |\n",
+    "members to lead each specific part   |\n",
+    "| 2/14  | 6 PM  | Edit, finalize, and submit proposal | Create schedule for future meetings |\n",
+    "| 2/23  | 12 PM  | More in depth research on the topic and brainstorm code structure | Create comprehensive flowchart for the code and heuristics |\n",
+    "| 3/13  | 12 PM  | Complete code implementation | Discuss final edits to the code |\n",
     "| 3/19  | Before 11:59 PM  | NA | Turn in Final Project  |"
    ]
   },
@@ -189,9 +173,7 @@
    "metadata": {},
    "source": [
     "# Footnotes\n",
-    "<a name=\"lorenznote\"></a>1.[^](#lorenz): Lorenz, T. (9 Dec 2021) Birds Aren’t Real, or Are They? Inside a Gen Z Conspiracy Theory. *The New York Times*. https://www.nytimes.com/2021/12/09/technology/birds-arent-real-gen-z-misinformation.html<br> \n",
-    "<a name=\"admonishnote\"></a>2.[^](#admonish): Also refs should be important to the background, not some randomly chosen vaguely related stuff. Include a web link if possible in refs as above.<br>\n",
-    "<a name=\"sotanote\"></a>3.[^](#sota): Perhaps the current state of the art solution such as you see on [Papers with code](https://paperswithcode.com/sota). Or maybe not SOTA, but rather a standard textbook/Kaggle solution to this kind of problem\n"
+    "<a name=\"demainenote\">[1]</a> Demaine, E. D., Hohenberger, S., & Liben-Nowell, D. (2003). Tetris is hard, even to approximate. Computational Complexity, 13(4), 426-453.<a name=\"mnihnote\">[2]</a> Mnih, V., Kavukcuoglu, K., Silver, D., Rusu, A. A., et al. (2015). Human-level control through deep reinforcement learning. Nature, 518(7540), 529-533.<a name=\"brownenote\">[3]</a> Browne, C. B., Powley, E., Whitehouse, D., Lucas, S. M., et al. (2012). A survey of Monte Carlo Tree Search methods. IEEE Transactions on Computational Intelligence and AI in Games, 4(1), 1-43."
    ]
   },
   {
