--- a/Proposal_Project_YourGroupNameHere.ipynb
+++ b/Proposal_Project_YourGroupNameHere.ipynb
@@ -9,28 +9,6 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Project Description\n",
-    "\n",
-    "You have the choice of doing either (1) an AI solve a problem style project or (2) run a Special Topics class on a topic of your choice.  If you want to do (2) you should fill out the _other_ proposal for that. This is the proposal description for (1).\n",
-    "\n",
-    "You will design and execute a machine learning project. There are a few constraints on the nature of the allowed project. \n",
-    "- The problem addressed will not be a \"toy problem\" or \"common training students problem\" like 8-Queens or a small Traveling Salesman Problem or similar\n",
-    "- If its the kind of problem (e.g., RL) that interacts with a simulator or live task, then the problem will have a reasonably complex action space. For instance, a wupus world kind of thing with a 9x9 grid is definitely too small.  A simulated mountain car with a less complex 2-d road and simplified dynamics seems like a fairly low achievement level.  A more complex 3-d mountain car simulation with large extent and realistic dynamics, sure sounds great!\n",
-    "- If its the kind of problem that uses a dataset, then the dataset will have >1k observations and >5 variables. I'd prefer more like >10k observations and >10 variables. A general rule is that if you have >100x more observations than variables, your solution will likely generalize a lot better. The goal of training an unsupervised machine learning model is to learn the underlying pattern in a dataset in order to generalize well to unseen data, so choosing a large dataset is very important.\n",
-    "- The project must include some elements we talked about in the course\n",
-    "- The project will include a model selection and/or feature selection component where you will be looking for the best setup to maximize the performance of your AI system. Generally RL tasks may require a huge amount of training, so extensive grid search is unlikely to be possible. However expoloring a few reasonable hyper-parameters may still be possible. \n",
-    "- You will evaluate the performance of your AI system using more than one appropriate metric\n",
-    "- You will be writing a report describing and discussing these accomplishments\n",
-    "\n",
-    "\n",
-    "Feel free to delete this description section when you hand in your proposal."
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -49,11 +27,10 @@
    "metadata": {},
    "source": [
     "# Abstract \n",
-    "We will create and a AI model that can maximize its score in a small scale Tetris game. The model will utilize mainly backtracking and rely on \n",
+    "We will create an AI model that can maximize its score in a small scale Tetris game. The model will utilize mainly backtracking and rely on \n",
     "height as heuristic. The optimization of depth of backtracking, and the variation in heuristic measurement for this problem will be the main focus\n",
     "of the project. The data used will be represented in preloaded order of pieces and thus allowing us to consider multiple variants of the same game based\n",
-    "on placement at the simultaneously. The heuristic will be interchangeable with the score, each line cleared equates to a points added to total score, which will help measure algorithms performance. The models depth and heuristic will be tweaked in order to maximize the score.\n",
-    "\n"
+    "on placement at the same time. The heuristic will be interchangeable with the score, each line cleared equates to a points added to total score, which will help measure algorithms performance. The models depth and heuristic will be tweaked in order to maximize the score.\n"
    ]
   },
   {
@@ -63,7 +40,7 @@
    "source": [
     "# Background\n",
     "\n",
-    "Tetris, developed by Alexey Pajitnov in 1984, has become a well-studied benchmark for artificial intelligence due to its complex decision-making process and classification as an NP-hard problem<a name=\"demaine\"></a><sup>[1]</sup>. The challenge arises from the need to efficiently place falling tetrominoes while managing an ever-changing board state.Traditional AI approaches relied on handcrafted heuristics, such as minimizing gaps and maximizing cleared lines, but these methods often struggled with long-term planning. With advancements in machine learning, reinforcement learning (RL) has emerged as a powerful technique for training AI to play Tetris. Deep Q-networks (DQN) and other deep reinforcement that utalize backtracking methods have been successfully applied to optimize decision-making in dynamic environments<a name=\"mnih\"></a><sup>[2]</sup>.Our research aims to develop a simplified Tetris AI model capable of learning optimal strategies and assisting human players. By leveraging modern AI techniques, we seek to improve decision-making efficiency and demonstrate the practical applications of reinforcement learning in structured problem domains<a name=\"browne\"></a><sup>[3]</sup>. "
+    "Tetris, developed by Alexey Pajitnov in 1984, has become a well-studied benchmark for artificial intelligence due to its complex decision-making process and classification as an NP-hard problem<a name=\"demaine\"></a><sup>[1]</sup>. The challenge arises from the need to efficiently place falling tetrominoes while managing an ever-changing board state.Traditional AI approaches relied on handcrafted heuristics, such as minimizing gaps and maximizing cleared lines, but these methods often struggled with long-term planning. With advancements in machine learning, reinforcement learning (RL) has emerged as a powerful technique for training AI to play Tetris. Deep Q-networks (DQN) and other deep reinforcement that utilize backtracking methods have been successfully applied to optimize decision-making in dynamic environments<a name=\"mnih\"></a><sup>[2]</sup>. Our research aims to develop a simplified Tetris AI model capable of learning optimal strategies and assisting human players. By leveraging modern AI techniques, we seek to improve decision-making efficiency and demonstrate the practical applications of reinforcement learning in structured problem domains<a name=\"browne\"></a><sup>[3]</sup>. "
    ]
   },
   {
@@ -71,7 +48,7 @@
    "metadata": {},
    "source": [
     "# Problem Statement\n",
-    "When it comes to Tetris, the game difficulty and complexity correspond to the range of peices, rotations and positions of placement. The larger the grid the more game varience to account for. Using traditional Tetris peices the board must be atleast 4 peices wide and long but there is no upper limit to a Tetris grid. As we try to optimize our model, we must be able to acount to how the scaling up the grid affects the efficency of our heuristic and backtraking techniques. Accounting for grid size goes hand in hand with the overall problem of creating a model that maximizes the overall score. "
+    "When it comes to Tetris, the game difficulty and complexity correspond to the range of pieces, rotations and positions of placement. The larger the grid the more game variance to account for. Using traditional Tetris pieces the board must be at least 4 pieces wide and long but there is no upper limit to a Tetris grid. As we try to optimize our model, we must be able to account for how scaling up the grid affects the efficiency of our heuristic and backtracking techniques. Accounting for grid size goes hand in hand with the overall problem of creating a model that maximizes the overall score."
    ]
   },
   {
@@ -87,19 +64,11 @@
    "metadata": {},
    "source": [
     "# Proposed Solution\n",
-    "By first minimizing the problem into 4x10 Tetris grid we aim to test how simple backtracking and heuristic can affect the overall performance of the game. Smaller game will also allow us to better visualize correlation between depth and performance. Then we can then see how scaling up the grid affects the depth required for backtraking and if the same heuristic will be sufficient. An average Tetris board is 10x20 but this allows for greater possibility of placement and our backtraking tree will scale perportionatly to the width of the boards. \n",
+    "By first minimizing the problem into 4x10 Tetris grid we aim to test how simple backtracking and heuristic can affect the overall performance of the game. Smaller games will also allow us to better visualize correlation between depth and performance. Then we can then see how scaling up the grid affects the depth required for backtracking and if the same heuristic will be sufficient. An average Tetris board is 10x20 but this allows for greater possibility of placement and our backtracking tree will scale proportionally to the width of the boards. \n",
     "\n",
-    "Our perposed solution to for creating an afficient backtracing algorithm to account for both varience and be runtime efficent is one with a set depth. We first load a large list of peices that is to large to be exhausted in a reasonable game of said grid size. The branching will occur when a state of a grid (our current action space) is introduced with a new peice. Each branch on the same level accounts for a possible valid peice rotatione and placement(the wider the board the more possible placements.) of the same peice. Once the set depth is reached in all branches the model will recurse backwards to the root compare the score of all possible grid states in the leafs and make the highest scoring leaf state the current state. We will then be back to a one node tree and will restart the branching process until all branches are game over aka max hieght of the grid has been reached. The score and our heurist will both be based on the rows cleared aka height. \n",
+    "Our proposed solution for creating an efficient backtracking algorithm to account for both variance and be runtime efficient is one with a set depth. We first load a large list of pieces that is too large to be exhausted in a reasonable game of said grid size. The branching will occur when a state of a grid (our current action space) is introduced with a new piece. Each branch on the same level accounts for a possible valid piece rotation and placement(the wider the board the more possible placements.) of the same piece. Once the set depth is reached in all branches the model will recurse backwards to the root, compare the score of all possible grid states in the leafs and make the highest scoring leaf state the current state. We will then be back to a one node tree and will restart the branching process until all branches are game over aka max height of the grid has been reached. The score and our heuristic will both be based on the rows cleared aka height. \n",
     "\n",
-    "We will use this repository: https://gist.github.com/zmcedillo/012ff15aa3018cb61b45e5bafb4b15ce in order to simulate the game states and make sure that all peices are within valid placement. Using this repository code we can also simulate boards of various sizes and can easily gadge the score for scaling. Since boards of various sizes will have an expected different score, the score of each grid will be compared to an average score of the same board played 1000 times with random valid placement. We will thus compare our models success against random models average.\n",
-    "\n",
-    "\n",
-    " \n",
-    "In this section, clearly describe a solution to the problem. The solution should be applicable to the project domain and appropriate for the dataset(s) or input(s) given. Provide enough detail (e.g., algorithmic description and/or theoretical properties) to convince us that your solution is applicable. Why might your solution work? Make sure to describe how the solution will be tested.  \n",
-    "\n",
-    "If you know details already, describe how (e.g., library used, function calls) you plan to implement the solution in a way that is reproducible.\n",
-    "\n",
-    "If it is appropriate to the problem statement, describe a benchmark model<a name=\"sota\"></a>[<sup>[3]</sup>](#sotanote) against which your solution will be compared. "
+    "We will use this repository: https://gist.github.com/zmcedillo/012ff15aa3018cb61b45e5bafb4b15ce in order to simulate the game states and make sure that all pieces are within valid placement. Using this repository code we can also simulate boards of various sizes and can easily judge the score for scaling. Since boards of various sizes will have an expected different score, the score of each grid will be compared to an average score of the same board played 1000 times with random valid placement. We will thus compare our model's success against random models' average."
    ]
   },
   {
@@ -161,7 +130,7 @@
     "Replace this with something meaningful that is appropriate for your needs. It doesn't have to be something that fits this format.  It doesn't have to be set in stone... \"no battle plan survives contact with the enemy\". But you need a battle plan nonetheless, and you need to keep it updated so you understand what you are trying to accomplish, who's responsible for what, and what the expected due dates are for each item.\n",
     "\n",
     "| Meeting Date  | Meeting Time| Completed Before Meeting  | Discuss at Meeting |\n",
-    "members to lead each specific part   |\n",
+    "|---|---|---|---|\n",
     "| 2/14  | 6 PM  | Edit, finalize, and submit proposal | Create schedule for future meetings |\n",
     "| 2/23  | 12 PM  | More in depth research on the topic and brainstorm code structure | Create comprehensive flowchart for the code and heuristics |\n",
     "| 3/13  | 12 PM  | Complete code implementation | Discuss final edits to the code |\n",
@@ -175,13 +144,6 @@
     "# Footnotes\n",
     "<a name=\"demainenote\">[1]</a> Demaine, E. D., Hohenberger, S., & Liben-Nowell, D. (2003). Tetris is hard, even to approximate. Computational Complexity, 13(4), 426-453.<a name=\"mnihnote\">[2]</a> Mnih, V., Kavukcuoglu, K., Silver, D., Rusu, A. A., et al. (2015). Human-level control through deep reinforcement learning. Nature, 518(7540), 529-533.<a name=\"brownenote\">[3]</a> Browne, C. B., Powley, E., Whitehouse, D., Lucas, S. M., et al. (2012). A survey of Monte Carlo Tree Search methods. IEEE Transactions on Computational Intelligence and AI in Games, 4(1), 1-43."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
